# mud_perspective

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  justfile
.gemini/: styleguide.md
.github/workflows/: ci.yml
data/: colliding_verbs.json  irregular_verbs.json  process.py
src/: cache.rs  debug.rs  engine.rs  evaluator.rs  grammar.rs  lib.rs  models.rs  parser.rs  tests.rs  typography.rs
src/engine/: anaphora.rs  disambiguation.rs  groups.rs
src/parser/: expressions.rs  utils.rs
src/tests/: anaphora.rs  common.rs  debug.rs  descriptions.rs  grammar.rs  groups.rs  modifiers.rs  parser.rs  resolution.rs  stances.rs  typography.rs  unified.rs
