[package]
name = "mud_perspective"
version = "0.1.0"
edition = "2024"
description = "A perspective-aware text generation engine for MUDs and interactive fiction."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonathanschaab/mud_perspective"
keywords = ["mud", "text-generation", "nlp", "template"]
categories = ["text-processing", "game-development"]

[features]
default = ["ansi", "mxp", "msp"]
ansi = []
mxp = []
msp = []

[dependencies]
arc-swap = "1.9.1"
bitflags = "2.4"
deunicode = "1.6.2"
in_definite = "1.1.2"
moka = { version = "0.12", features = ["sync"] }
phf = { version = "0.13.1", features = ["macros"] }
tracing = "0.1"
unicode-segmentation = "1.13.2"

[dev-dependencies]
serial_test = "3.1"

[build-dependencies]
phf_codegen = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
